tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_reference_flags_r_t_e_g_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - reference
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
reference
 - crate::constants::PATH_QUALIFIER_SELF
reference::tests
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::Segments
 - crate::reference::TypeReference

----- stderr -----
