tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_resolve_flags_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - resolve
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::cache::ParseCache
crate::discover::CrateInfo
crate::module_path::is_in_subtree
crate::module_path::parent_module
crate::reference::PathPrefix
crate::reference::TypeReference
crate::utils::descend_inline_module
crate::utils::read_source_file

----- stderr -----
